--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "esbuild": "^0.14.26",
     "esbuild-register": "^3.3.2",
     "mocha": "^9.2.2",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.6.2",
     "wsrun": "^5.2.4"
   }
