--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,11 +1,26 @@
 {
   "name": "frontend",
-  "version": "1.0.0",
+  "version": "0.0.0",
+  "description": "",
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
+  "scripts": {
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
   "license": "MIT",
-
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3",
+    "vite": "^2.8.6",
+    "vite-plugin-solid": "^2.2.6"
+  },
   "dependencies": {
-    "@boil/core": "1.0.0"
+    "@boil/core": "1.0.0",
+    "solid-js": "^1.3.13"
   }
 }
